# loco-mujoco

./: .gitignore  .gitmodules  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  download_datasets.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: continuous_integration.yml
datasets/: create_minidatasets.py
docs/: conf.py  index.rst  requirements.txt  utils.py
docs/source/: loco_mujoco.api.rst  loco_mujoco.datasets.rst  loco_mujoco.domain_randomization.rst  loco_mujoco.environments.base.rst  loco_mujoco.environments.data.rst  loco_mujoco.environments.humanoids.rst  loco_mujoco.environments.quadrupeds.rst  loco_mujoco.environments.rst  loco_mujoco.installation.rst  loco_mujoco.rewards.rst  loco_mujoco.rst  loco_mujoco.trajectory.rst  loco_mujoco.tutorials.rst  loco_mujoco.utils.rst
examples/domain_randomization/: atlas.yaml  domain_randomization_humanoid.yaml  domain_randomization_talos.yaml  domain_randomization_unitree_a1.yaml  example_atlas.py  example_humanoid_muscle.py  example_humanoid_torque.py  example_humanoid_torque_4_ages.py  example_talos.py  example_unitree_a1.py  humanoid.yaml  unitree_a1.yaml
examples/imitation_learning/: README.md  confs.yaml  experiment.py  launcher.py  utils.py
examples/reinforcement_learning/: example_unitree_h1.py
examples/replay_datasets/: record_all.py  replay_Atlas.py  replay_Kuavo.py  replay_Talos.py  replay_Unitree.py  replay_Unitree_G1.py  replay_Unitree_H1.py  replay_Unitree_replay_actions_gymnasium.py  (+11 more)
loco-mujoco/: .gitignore
loco_mujoco/: __init__.py
tests/: test_environments.py
(+480 files in other folders)
